# mutatiom

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  fly.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: no-prs.yml
docs/: METHODS.md
server/: README.md  pyproject.toml
server/mutatiom/: __init__.py  app.py
src/: App.tsx  DnaPanel.tsx  DoubleWell2DPanel.tsx  IsotopePanel.tsx  LindbladPanel.tsx  index.css
src/sim/: basePairData.ts  constants.ts  dna.ts  doubleWell.ts  doubleWell2d.ts  eigen.ts  ensembl.ts  evolve.ts  isotopes.ts  lindblad.ts  spectralDensity.ts  tunneling.ts
test/: basePairData.test.ts  dna.test.ts  doubleWell2d.test.ts  eigen.test.ts  evolve.test.ts  isotopes.test.ts  lindblad.test.ts  spectralDensity.test.ts  tunneling.test.ts  validation.test.ts
