[project]
name = "mutatiom-server"
version = "0.1.0"
description = "Mutatiom server — static hosting for the client-side proton-tunnelling simulator."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mutatiom"]
